# ida-domain

./: .pre-commit-config.yaml  CLA.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: docs.yml  lint.yml  release.yml  tests.yml
docs/: examples.md  faq.md  getting_started.md  index.md  llm.md  usage.md
docs/overrides/: main.html
docs/ref/: basic_blocks.md  bytes.md  comments.md  database.md  entries.md  flowchart.md  functions.md  heads.md  hooks.md  instructions.md  names.md  operands.md  segments.md  signature_files.md  strings.md  types.md  xrefs.md
examples/: analyze_bytes.py  analyze_database.py  analyze_functions.py  analyze_strings.py  analyze_xrefs.py  explore_database.py  explore_flirt.py  hooks_example.py  manage_types.py  my_first_script.py  quick_example.py
examples/ida-python-equivalents/debugger/: automatic_steps.py
examples/ida-python-equivalents/decompiler/: decompile_entry_points.py  produce_c_file.py  vds1.py  vds13.py
examples/ida-python-equivalents/disassembler/: assemble.py  dump_extra_comments.py  dump_flowchart.py  list_function_items.py  list_segment_functions.py  list_strings.py  log_idb_events.py
examples/ida-python-equivalents/types/: create_libssh2_til.py  create_struct_by_parsing.py
ida_domain/: __init__.py  base.py  basic_blocks.py  bytes.py  comments.py  database.py  entries.py  flowchart.py  functions.py  heads.py  hooks.py  instructions.py  names.py  operands.py  segments.py  signature_files.py  strings.py  types.py  xrefs.py
tests/: ida_domain_test.py
tests/resources/: README.md  example.til  tiny.asm
