[project]
name = "ida-domain"
version = "0.0.7-dev.2"
description = "IDA Domain API - Python interface for IDA Pro reverse engineering platform"
requires-python = ">=3.9"
license = "MIT"
readme = "README.md"
keywords = ["ida", "ida-pro", "reverse-engineering", "disassembler", "binary-analysis", "malware-analysis", "security"]
authors = [
    { name = "Hex-Rays SA", email = "support@hex-rays.com" }
]

dependencies = [
    "idapro>=0.0.5",
    "typing-extensions>=4.14.0",
]

[project.urls]
Homepage = "https://hex-rays.com/"
Documentation = "https://ida-domain.docs.hex-rays.com/"
Repository = "https://github.com/hexrayssa/ida-domain"
Issues = "https://github.com/hexrayssa/ida-domain/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "graphviz>=0.20.0", # Added for inheritance diagrams,
    "python-semantic-release>=10.3.1",
]
docs = [
    "mkdocs-material",
    "mkdocs-click>=0.9.0",
    "mkdocstrings[python]>=0.28.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-include-markdown-plugin>=7.1.5",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-section-index>=0.3.10",
    "mkdocs-llmstxt>=0.2.0",
]


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
    "twine>=6.1.0",
]

[tool.coverage.run]
source = ["ida_domain", "./ida_domain"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["ida_domain/__init__.py:__version__"]
build_command = """
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""
dist_path = "dist/"
major_on_zero = false
allow_zero_version = true
